# ai-app

./: .env.example  .gitignore  BUILD-GUIDE-V2.md  BUILD-GUIDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.kdbp/: BEHAVIOR.md  DECISIONS.md  DEPLOYMENTS.md  DEVIATIONS.md  DOCS.md  KNOWLEDGE.md  LEDGER.md  MAINTENANCE.md  PENDING.md  PLAN.md  PUSH.md  VALUES.md
.kdbp/archive/: KNOWLEDGE.md.pre-migrate-20260417.md  completed_PLAN_2026-04-20_phase-1-guardrails.md
alembic/: env.py
alembic/versions/: 001_create_incidents_table.py
app/agent/: classify.py  guardrails.py  pipeline.py  prompts.py  triage.py  triage_agent.py
app/api/: main.py
app/db/: config.py  models.py  repository.py
app/integrations/: dispatcher.py
docs/: AGENTS_USE.md  SCALING.md  architecture-patterns.md  architecture.md
docs/archive/: gabe-teach-v2-dogfood.md  gabe-teach-v2-patch.md
docs/references/agent-engineering/: 000-overview.md  001-architecture-taxonomy.md  002-level-1-prompt-and-parse.md  003-level-2-structured-agent.md  004-level-3-context-engineered.md  005-level-4-production-pipeline.md  006-level-5-autonomous-investigation.md  007-beyond-level-5.md  008-anti-patterns.md  009-implementation-roadmap.md
docs/wells/: 1-guardrails.md  2-llm-pipeline.md  3-api-layer.md  4-data-model.md  5-integrations.md  6-frontend.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: test_api.py  test_classify.py  test_guardrails.py  test_pipeline.py
(+6 files in other folders)
