[project]
name = "ai-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-ai>=0.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "sse-starlette>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
